--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,13 @@
   "scripts": {
     "start:dev": "tsx --watch src/server.ts",
     "start:prod": "node dist/server.js",
-    "build": "tsc -p .",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "build": "tsc -p ."
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.1.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
-    "eslint": "^8.54.0",
     "tsx": "^4.5.0"
   },
   "dependencies": {
