--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,27 @@
   "scripts": {
     "start:dev": "tsx --watch src/server.ts",
     "start:prod": "node dist/server.js",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint:check": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
     "prisma": "^5.6.0",
-    "tsx": "^4.5.0"
+    "tsx": "^4.5.0",
+    "typescript": "*"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
