--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start:dev": "tsx --watch src/server.ts",
     "start:prod": "node dist/server.js",
     "build": "tsc -p .",
+    "test": "vitest",
     "lint:check": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix"
   },
@@ -26,7 +27,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "prisma": "^5.6.0",
     "tsx": "^4.5.0",
-    "typescript": "*"
+    "typescript": "*",
+    "vitest": "^1.0.4"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
