--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "prisma": "^5.6.0",
     "tsx": "^4.5.0",
     "typescript": "*",
+    "vite-tsconfig-paths": "^4.2.2",
     "vitest": "^1.0.4"
   },
   "dependencies": {
