--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.0-rc17",
     "lucide-react": "^0.301.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
